switch to PostgreSQL DB

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DEBUG=<set True or False for debug mode>
 GEOCODER_API_KEY=<your yandex geocoder API key>
 ROLLBAR_TOKEN=<Rollbar access token>
 ENVIRONMENT=<Rollbar environent>
+DB_NAME=<put here your DB name>
+DB_USER=<database user>
+DB_PASSWORD=<user's password>
