Package database access settings into DATABASE_URL

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ SECRET_KEY=<Django project secret key>
 ALLOWED_HOSTS=<put here your server address>
 DEBUG=<set True or False for debug mode>
 GEOCODER_API_KEY=<your yandex geocoder API key>
+DATABASE_URL=postgres://<database user>:<user's password>@localhost:/<your DB name>
+
 ROLLBAR_TOKEN=<Rollbar access token>
 ENVIRONMENT=<Rollbar environent>
-DB_NAME=<put here your DB name>
-DB_USER=<database user>
-DB_PASSWORD=<user's password>
